--- a/app/templates/django_registration/registration_form.html
+++ b/app/templates/django_registration/registration_form.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load bootstrap5 %}
 {% block content %}
+<style>
+    .form-text .text-muted {
+        display: none !important;
+      }
+</style>
 <section class="login-container">
     <div class="container-header">
         <h3 class="container-title">Login To Access Your Account</h3>
