--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card">
-                    
+
                     {% if profile.profile_photo %}
                     <img src="{{profile.profile_photo.url}}" alt="" class="card-img-top">
                     {%else%}
@@ -38,6 +38,8 @@
                             {{ user.first_name }} {{ user.last_name }}
                         </h4>
                         <p>{{ user.username }}</p>
+                        <p><span class="badge rounded-pill bg-info text-white">
+                                {{ profile.contact }} </span></p>
                         <p>
                             {% if profile.bio %}
                             <small>{{ profile.bio }}</small>
@@ -47,14 +49,7 @@
                         </p>
                         <h6>Joined on: <span class="badge rounded-pill bg-secondary text-white">
                                 {{ user.date_joined|date }} </span></h6>
-                        <!-- <div class="d-flex justify-content-evenly">
-                            <div>
-                                <p class=""> <i class="fa fa-user"></i> 10 followers</p>
-                            </div>
-                            <div>
-                                <p class=""> <i class="fa fa-user"></i> 11 followers</p>
-                            </div>
-                        </div> -->
+
                     </div>
                 </div>
                 <div class="row mt-3 mb-3">
@@ -103,7 +98,7 @@
                                                         <div class="form-group mb-3">
                                                             <label for="contact">Contact</label>
                                                             <input type="text" class="form-control" id="contact"
-                                                                name="contact" value="{{ user.contact }}">
+                                                                name="contact" value="{{ profile.contact }}">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -151,7 +146,7 @@
                     <div class="col-md-12">
                         <button type="button" class="btn btn-lg m-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            <i class="fa fa-plus text-white"></i> Add Photo
+                            <i class="fa fa-plus text-white"></i> Add Project
                         </button>
                         <!-- modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
@@ -159,28 +154,32 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Add Photo</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Add Project</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="" method="post" enctype="multipart/form-data">
+                                        <form action="{% url 'save_project' %}" method="post" enctype="multipart/form-data">
                                             {% csrf_token %}
                                             <div class="form-group">
-                                                <label for="image_name">Name</label>
-                                                <input type="text" class="form-control" value="" name="image_name"
+                                                <label for="title">Title</label>
+                                                <input type="text" class="form-control" value="" name="title"
                                                     required>
                                             </div>
-                                            <input type="hidden" name="user_id" value="{{ user.id }}">
                                             <div class="form-group mt-3">
-                                                <label for="exampleFormControlTextarea1">Caption</label>
-                                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                                                    name="image_caption" required></textarea>
+                                                <label for="url">URL Link</label>
+                                                <input type="url" class="form-control" value="" name="url"
+                                                    required>
                                             </div>
                                             <div class="form-group mt-3">
-                                                <label for="exampleFormControlFile1">Upload Photo</label>
+                                                <label for="exampleFormControlFile1">Photo</label>
                                                 <input type="file" class="form-control" id="exampleFormControlFile1"
-                                                    name="image_file" required>
+                                                    name="image" required>
+                                            </div>
+                                            <div class="form-group mt-3">
+                                                <label for="exampleFormControlTextarea1">Description</label>
+                                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
+                                                    name="description" required></textarea>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="submit" class="btn">Save</button>
