--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -159,17 +159,16 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="{% url 'save_project' %}" method="post" enctype="multipart/form-data">
+                                        <form action="{% url 'save_project' %}" method="post"
+                                            enctype="multipart/form-data">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <label for="title">Title</label>
-                                                <input type="text" class="form-control" value="" name="title"
-                                                    required>
+                                                <input type="text" class="form-control" value="" name="title" required>
                                             </div>
                                             <div class="form-group mt-3">
                                                 <label for="url">URL Link</label>
-                                                <input type="url" class="form-control" value="" name="url"
-                                                    required>
+                                                <input type="url" class="form-control" value="" name="url" required>
                                             </div>
                                             <div class="form-group mt-3">
                                                 <label for="exampleFormControlFile1">Photo</label>
@@ -191,23 +190,45 @@
                     </div>
                 </div>
 
-
-                {% for image in images %}
-                <div class="col-md-4">
-                    <a href="{% url 'single.image' image.id %}">
-                        <div class="card mb-4">
-                            <img src="{{ image.image.url }}" class="card-img-tops" alt="Image">
-                        </div>
-                    </a>
-                </div>
-                {% empty %}
-                <div class="col-md-4"></div>
-                <div class="col-md-4">
-                    <div class="alert alert-info" role="alert">
-                        No images!
+                <div class="col-md-12">
+                    <div class="card m-3">
+                        <table class="table table-responsive table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Photo</th>
+                                    <th scope="col">Title</th>
+                                    <th scope="col">View</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for image in images %}
+                                <tr>
+                                    <th scope="row">
+                                        <img src="{{ image.image.url }}" class="border-radius-around" alt="Image">
+                                    </th>
+                                    <td>{{ image.title }}</td>
+                                    <td><a href="{{ image.url }}" target="_blank" class="text-primary" rel="noopener noreferrer">View
+                                            Site</a></td>
+                                    <td>
+                                        <!-- view button -->
+                                        <a class="text-primary m-3" href="">
+                                            <i class="fa fa-eye"></i>
+                                        </a>
+                                        <a class="text-primary m-3" href="">
+                                            <i class="fa fa-pen"></i>
+                                        </a>
+                                        <a class="text-danger" href="">
+                                            <i class="fa fa-trash-alt text-danger"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                {% empty %}
+                                {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-                {% endfor %}
 
             </div>
 
