deleting projects implemented

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -215,10 +215,10 @@
                                         <a class="text-primary m-3" href="">
                                             <i class="fa fa-eye"></i>
                                         </a>
-                                        <a class="text-primary m-3" href="">
+                                        <!-- <a class="text-primary m-3" href="">
                                             <i class="fa fa-pen"></i>
-                                        </a>
-                                        <a class="text-danger" href="">
+                                        </a> -->
+                                        <a class="text-danger" href="{% url 'delete_project' image.id %}">
                                             <i class="fa fa-trash-alt text-danger"></i>
                                         </a>
                                     </td>
