--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -166,6 +166,10 @@
                                                 <label for="title">Title</label>
                                                 <input type="text" class="form-control" value="" name="title" required>
                                             </div>
+                                            <div class="form-group">
+                                                <label for="title">Location</label>
+                                                <input type="text" class="form-control" value="" name="location" required>
+                                            </div>
                                             <div class="form-group mt-3">
                                                 <label for="url">URL Link</label>
                                                 <input type="url" class="form-control" value="" name="url" required>
