--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
                     <div class="homepage-content">
                         <a href="">
                             <h1 class="text-white text-bold">
-                                Spotify Culture Next 2021
+                                {{project_home.title }}
                             </h1>
                             <p class="author-home mt-2">
                                 by
