--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,12 +53,12 @@
     <div class="container mt-5">
         <div class="row mt-4">
             {% for project in projects %}
-            <div class="col-md-3">
+            <div class="col-md-12 col-lg-3">
                 <div class="card mb-4 post-card">
                     <img src="{{ project.image.url }}"
                         class="card-img-top" alt="Personal">
                     <div class="card-body">
-                        <a href="">
+                        <a href="{% url 'project_details' project.id %}">
                             <h6 class="fade-item mb-2">{{ project.title }}</h6>
                             <div class="d-flex justify-content-between location-date">
                                 <div>
@@ -76,11 +76,11 @@
                                             alt="">
                                     </div>
                                     <div>
-                                        <p class="author mt-1 text-uppercase">BY <strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></p>
+                                        <p class="author mt-1 text-uppercase"><strong>BY <strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></strong></p>
                                     </div>
                                 </div>
                                 <div class="display-on-hover">
-                                    <a href="" class="btn btn-custome">Vote Now</a>
+                                    <a href="{% url 'project_details' project.id %}" class="btn btn-custome"><small>Vote Now</small></a>
                                 </div>
                             </div>
                         </a>
