--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -344,15 +344,15 @@ a:focus {
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
-
 .btn-design,
 .btn-design:hover {
   background-color: transparent;
   color: white;
-  border-radius: 50%;
-  font-size: 2em;
+  height: 50px;
+  width: 50px;
+  font-weight: bold;
   font-weight: 800;
-  padding: 8px;
+  border-radius: 50%;
   border: 2px solid rgb(143, 30, 30);
 }
 
@@ -361,9 +361,10 @@ a:focus {
   background-color: transparent;
   color: white;
   border-radius: 50%;
-  font-size: 2em;
   font-weight: 800;
-  padding: 8px;
+  height: 50px;
+  width: 50px;
+  font-weight: bold;
   border: 2px solid rgb(148, 148, 4);
 }
 
@@ -372,12 +373,12 @@ a:focus {
   background-color: transparent;
   color: white;
   border-radius: 50%;
-  font-size: 2em;
   font-weight: 800;
-  padding: 8px;
+  height: 50px;
+  width: 50px;
+  font-weight: bold;
   border: 2px solid rgb(0, 174, 255);
 }
-
 .button-group .justify-content-center div {
   margin-right: 15px;
 }
