--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <div class="homepage-content">
-                        <a href="">
+                        <a href="{% url 'project_details' project_home.id %}">
                             <h1 class="text-white text-bold text-capitalize">
                                 {{project_home.title }}
                             </h1>
@@ -71,12 +71,17 @@
                             <div class="d-flex justify-content-between mt-2">
                                 <div class="d-flex justify-content-start">
                                     <div>
-                                        <img class="poster-img"
-                                            src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/436194/59808465559b0.jpg"
-                                            alt="">
+                                        <!-- check if author image exists else display a placeholder -->
+                                        {% if project.user.profile_image %}
+                                        <img src="{{ project.user.profile_image.url }}"
+                                            class="poster-img" alt="Author">
+                                        {% else %}
+                                        <img src="https://st2.depositphotos.com/1104517/11965/v/600/depositphotos_119659092-stock-illustration-male-avatar-profile-picture-vector.jpg"
+                                            class="poster-img" alt="Author">
+                                        {% endif %}
                                     </div>
                                     <div>
-                                        <p class="author mt-1 text-uppercase"><strong>BY <strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></strong></p>
+                                        <p class="author mt-2 text-uppercase"><strong>BY <strong>{{ project.user.first_name }} {{ project.user.last_name }}</strong></strong></p>
                                     </div>
                                 </div>
                                 <div class="display-on-hover">
